For Emetric data export: for sftp